[package]
name = "rollercoaster"
description = "Extra iterators for grouping, sorting, arithmetic, and more."
readme = "README.md"

keywords = ["iterator", "loop", "sorting", "grouping", "unique"]
categories = ["rust-patterns", "algorithms"]

version = "0.0.3"
edition = "2021"
license = "MIT"

repository = "https://github.com/Enitoni/rollercoaster"
authors = [
  "Enitoni <root@enitoni.dev>"
]
